--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-image: url(images/back.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    margin-bottom: 20vh;
 }
 
 header {
@@ -30,7 +35,22 @@ header {
 
 .myLinks {
     text-decoration: none;
-    color: linear-gradient(to right, #494964, #6f6f89);
+    color: #6f6f89;
+}
+
+.myLinks::after {
+    content:'';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: lightgray;
+    transition: width .3s
+}
+
+
+.myLinks:hover::after{
+    width: 100%;
+    transition: width .3s;
 }
 nav {
     flex: 0.2;
@@ -197,23 +217,6 @@ ul {
 .intro a:hover > .fa-envelope{
     color:#bd081c;
 }
-
-.big-circle {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	z-index: -1;
-    opacity: 0.5;
-    height: 50vh;
-}
-
-section:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 200px;
-    background: linear-gradient(lightgray, lightblue);
-    clip-path: polygon(100% 10%,0 100%, 100% 100%);
+footer {
+    background: green;
 }
