--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     background-position-y: bottom;
     margin-bottom: 20vh;
+    background-attachment: fixed;
 }
 
 header {
@@ -35,7 +36,8 @@ header {
 
 .myLinks {
     text-decoration: none;
-    color: #6f6f89;
+    color: black;
+    opacity:0.8;
 }
 
 .myLinks::after {
