--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,16 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(images/back.svg);
+    background-image: url(images/waves.svg);
+    background-size: cover;
+    background-attachment: fixed;
+    /*
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: bottom;
     margin-bottom: 20vh;
     background-attachment: fixed;
+    */
 }
 
 header {
@@ -31,13 +35,13 @@ header {
     margin: auto;
     justify-content: space-around;
     list-style: none;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .myLinks {
     text-decoration: none;
     color: black;
-    opacity:0.8;
+    opacity:1;
 }
 
 .myLinks::after {
@@ -77,8 +81,10 @@ nav {
 }
 
 .about-intro {
-    text-align: center;
-    flex: 2;
+    font-weight: 200;
+    font-size: 18px;
+    color: #585772;
+    flex: 1;
 }
 
 .about-img {
@@ -89,16 +95,15 @@ nav {
 .about-intro h1 {
     font-size: 40px;
     font-weight: 300;
-    background: linear-gradient(to right, #494964, #6f6f89);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #585772;
+    text-align: center;
 }
 
 .about-intro p {
     font-weight: 200;
     font-size: 18px;
     text-align: center;
-    color: #dbdae4;
+    color: #585772;
 }
 .intro {
     text-align: center;
@@ -142,55 +147,9 @@ nav {
     color: #585772;
 }
 
-.circle-here{
-    border:2px solid lightblue;
-    border-radius:50%;
-    background:rgba(0,0,0,0);
-    background-color: lightblue;
-    width: 150px;
-    height: 150px;
-    text-align:center;
-    position: absolute;
-    margin-top: 10px;
-    margin-left: 10px;
-    z-index:-1;
-}
-
 .myCircles {
     display: inline-block;
     align-items:block;
-}
-
-
-.circle-blue{
-    border:2px solid lightblue;
-    border-radius:50%;
-    background:rgba(0,0,0,0);
-    background-color: lightblue;
-    width: 500px;
-    height: 500px;
-    text-align:center;
-    position: absolute;
-    min-height:0vh;
-    margin-left: -900px;
-    margin-top: -700px;
-    z-index:-1;
-    opacity: 0.7;
-}
-
-.circle-red{
-    border:2px solid lightcoral;
-    border-radius:50%;
-    background:rgba(0,0,0,0);
-    background-color: lightcoral;
-    width: 65vw;
-    height: 65vmin;
-    text-align:center;
-    position: absolute;
-    margin-left: 55vw;
-    margin-top: -90vmin;
-    z-index:-1;
-    opacity: 0.7;
 }
 
 ul {
