--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(images/waves.svg);
+    background-color: #f6f6f8;
+    /*
+    background-image: url(images/images3.jpg);
     background-size: cover;
     background-attachment: fixed;
     /*
@@ -30,18 +32,27 @@ header {
     flex: 1;
 }
 
+.logos a{
+    color: black;
+    text-decoration: none;
+}
+
 .nav-bar{
     display: flex;
     margin: auto;
     justify-content: space-around;
     list-style: none;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 .myLinks {
     text-decoration: none;
-    color: black;
+    color: rgb(128, 128, 128);
     opacity:1;
+}
+
+nav {
+    flex: 0.5;
 }
 
 .myLinks::after {
@@ -49,7 +60,7 @@ header {
     display: block;
     width: 0;
     height: 2px;
-    background: lightgray;
+    background: rgb(155, 202, 240);
     transition: width .3s
 }
 
@@ -58,9 +69,13 @@ header {
     width: 100%;
     transition: width .3s;
 }
-nav {
-    flex: 0.2;
-}
+
+nav.fill ul li a:hover {
+    color: rgb(155, 202, 240);
+    z-index: 1;
+    opacity: 1;
+    transition: width 1s;
+  }
 
 .socials {
     flex: 1;
@@ -79,13 +94,14 @@ nav {
     align-items: center;
     min-height: 30vh;
 }
-
 .about-intro {
     font-weight: 200;
     font-size: 18px;
     color: #585772;
     flex: 1;
-    margin:auto;
+    min-height: 30vh;
+    align-items: center;
+    display: inline-block;
 }
 
 .about-img {
@@ -94,16 +110,16 @@ nav {
 }
 
 .about-intro h1 {
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 300;
     color: #585772;
     text-align: center;
 }
 
 .about-intro p {
-    font-weight: 200;
-    font-size: 18px;
-    align-items: center;
+    font-weight: 300;
+    font-size: 15px;
+    text-justify: auto;
     text-align: center;
     color: #585772;
 }
@@ -120,6 +136,7 @@ nav {
     -webkit-text-fill-color: transparent;
     animation: type 7s steps(15) infinite;
     margin: auto;
+    margin-top: 30px;
     overflow:hidden;
     white-space:nowrap;
     border-right:3px solid #494964;
@@ -182,4 +199,21 @@ ul {
 }
 footer {
     background: green;
+}
+
+.profile-image {
+    max-height: 175px;
+       
+}
+
+.rounded {
+    border-radius: 50%;
+}
+
+.intro img {
+    display: block;
+    margin: 0 auto;
+    background-color: rgb(155, 202, 240);
+    /*background-color: white;*/
+    padding: 8px;
 }
