--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,9 @@ nav.fill ul li a:hover {
     background: linear-gradient(to right, #494964, #6f6f89);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: type 7s steps(15) infinite;
+    animation: 
+        type 5s steps(15) infinite,
+        blink-caret .75s step-end infinite;
     margin: auto;
     margin-top: 30px;
     overflow:hidden;
@@ -148,6 +150,7 @@ nav.fill ul li a:hover {
     0% {
       width:0ch;
     }
+    
     30% {
       width: 15ch;
     }
@@ -157,6 +160,12 @@ nav.fill ul li a:hover {
     100% {
       width: 0ch;
     }
+  }
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: black; }
   }
 
 .intro p {
@@ -217,3 +226,27 @@ footer {
     /*background-color: white;*/
     padding: 8px;
 }
+.underline--magical {
+    background-image: linear-gradient(120deg, rgb(155, 202, 240), rgb(155, 202, 240));
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+  }
+
+  .underline--magical:hover {
+    background-image: linear-gradient(120deg, rgb(155, 202, 240), rgb(155, 202, 240));
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+    background-size: 100% 88%;
+  }
+
+  .underline {
+    background-image: linear-gradient(120deg, rgb(155, 202, 240), rgb(155, 202, 240));
+    background-repeat: no-repeat;
+    background-size: 100% 0.1em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+  }
