Adding link to medium account

--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,10 @@ ul {
     color:#bd081c;
 }
 
+.intro a:hover > .fa-medium{
+    color:	#14c867;
+}
+
 .profile-image {
     max-height: 175px;
        
