--- a/about.css
+++ b/about.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 body {
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards;
     /* Typography Declaration */
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
@@ -171,5 +174,13 @@ img {
           padding: 0 3em;
     }
   }
-  
+
+  @keyframes fadeInAnimation { 
+    0% { 
+        opacity: 0; 
+    } 
+    100% { 
+        opacity: 1; 
+     } 
+} 
   
