--- a/about.css
+++ b/about.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.no-bullets {
+  list-style: none;
+}
+
 body {
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1; 
